# src

./: .GHShowerGenerator.xml.swp  .MicrowaveDetector-EASIER.xml.swp  CMakeLists.txt  CMakeLists.txt~  testoConfig-EASIER.root
CMakeModules/: CMakeCompareVersionStrings.cmake  FindFFTW3.cmake  FindGRASP.cmake  FindRoot.cmake  UtilityMacros.cmake
Detector/: CMakeLists.txt  CTestTestfile.cmake  Config-Test.xml  DetectorSetupDictionary.cc  DetectorSetupDictionary.h  Makefile  MicrowaveDetector-120702.xml  StandardConfig_08ch.xml  StandardConfig_12ch.xml  cmake_install.cmake  libDetector.dylib
Detector/src/: Antenna.cc  Antenna.h  Array.cc  Array.h  Atmosphere.cc  Atmosphere.h  Channel.cc~  Channel.h  Channel.h~  ChannelGain.cc  ChannelGain.h  ChannelMap.cc  ChannelMap.h  Detector.cc  Detector.cc~  Detector.h  DetectorSetup.cc~  DetectorSetup.h  DetectorSetupLinkDef.h  Station.cc  Station.h
Detector/tests/: ChannelGainTest.cc  ChannelMapTest.cc
Detector/tests/ChannelMapTest.in/: HandlesMissingConfigFile-Config.xml  HandlesMissingConfigLink-Config.xml  HandlesMissingKGStationTriggerTimeOffset-Config.xml  HandlesMissingKGStationTriggerTimeOffset-Map.xml  HandlesMissingKGStationTriggerTimeRange-Config.xml  HandlesMissingKGStationTriggerTimeRange-Map.xml  HandlesRedundantAntennaDefinitions-Config.xml  HandlesRedundantAntennaDefinitions-Map.xml  HandlesRedundantDigitizerDefinitions-Config.xml  HandlesRedundantDigitizerDefinitions-Map.xml  HandlesRedundantKGStationDefinitions-Config.xml  HandlesRedundantKGStationDefinitions-Map.xml  HandlesWrongKGStationTriggerTimeRange-Config.xml  HandlesWrongKGStationTriggerTimeRange-Map.xml  ParsesCorrectly-Config.xml  ParsesCorrectly-Map.xml
Detector/xml/: ArrayModels.xml  CROME-setup1.xml  ChannelMap-110511.xml  ChannelMap-110606.xml  ChannelMap-111024.xml  ChannelMap-120404.xml  ChannelMap-120418.xml  ChannelMap-120516.xml  ChannelMap-120702.xml  ChannelMap-120712.xml  ChannelMap-120720.xml  ChannelMap-120724.xml  ChannelMap-120801.xml  ChannelMap-test.xml  ChannelMap_12ch.xml  ChannelModels.xml  Config-110511.xml  Config-110606.xml  Config-110802.xml  Config-111024.xml  Config-120404.xml  Config-120418.xml  Config-120516.xml  Config-120615.xml  Config-120702.xml  Config-120712.xml  Config-120720.xml  Config-120724.xml  Config-120801.xml  Config-Test.xml.in  DigitizerModels.xml  DishModels.xml  ElectronicsChainModels.xml  GainPattern-grasp-central_feed.xml  GainPattern-grasp-corner_feed.xml  GainPattern-grasp-side_feed.xml  MicrowaveDetector-110511.xml  MicrowaveDetector-111024.xml  MicrowaveDetector-120418.xml  MicrowaveDetector-120516.xml  (+10 more)
Event/: CMakeLists.txt  CTestTestfile.cmake  MWEventDictionary.cc  MWEventDictionary.h  Makefile  cmake_install.cmake  libEvent.dylib
Event/src/: .ChannelData.cc.swm  .ChannelData.cc.swn  .ChannelData.cc.swo  AntennaData.cc  AntennaData.cc.SAVE  AntennaData.cc~  AntennaData.h  AntennaData.h.SAVE  AntennaData.h~  ArrayData.cc  ArrayData.h  ChannelData.cc  ChannelData.cc.SAVE  ChannelData.cc~  ChannelData.h  ChannelData.h.SAVE  ChannelData.h~  Event.cc  Event.cc~  Event.h~  EventFile.cc  EventFile.h  EventLinkDef.h  KGBits.h  Shower.cc  Shower.cc~  Shower.h  Shower.h~  SimData.cc  SimData.h  StationData.cc  StationData.h
Examples/: .RunSensitivity.cc.swo  .SimData.cc.swo  .analyzeSim.cc.swm  .analyzeSim.cc.swn  .analyzeSim.cc.swo  .testTsky.cc.swo  .testwindows.cc.swp  :  =  AddBackground  AddBackground.cc  CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Data_FFT  Data_FFT.cc--  Data_FFT_1.cc--  MakeRandomTraces  MakeRandomTraces.cc  Makefile  RunSensitivity  RunSensitivity.roll.cc--  RunSensitivity.rollSNRCh.cc--  RunSensitivity.save.cc  SimData  SimData.cc  SimData.cc--  SimData.cc~  Styler.h  a  addCorrectedTriggerTime  addCorrectedTriggerTime.cc  analyzeSim  analyzeSim.cc  analyzeSim.cc--  analyzeSim.cc.SAVE  analyzeSim.cc~  analyzeSim_1  analyzeSim_1.cc  analyzeSim_1.cc~  (+35 more)
Simulation/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  libSim.dylib
Simulation/grasp/camera_4_feeds/: input.g9p  input.tor
Simulation/grasp/camera_9_feeds/: input-center_feed.tor  input-corner_feed.tor  input-side_feed.tor  input.tci
Simulation/src/: BackgroundSimulator.cc  BackgroundSimulator.h  ElectronicsSimulator.cc  ElectronicsSimulator.h  GHShowerGenerator.cc  GHShowerGenerator.cc~  GHShowerGenerator.h  GHShowerParameterization.cc  GHShowerParameterization.h  KGSimulator.cc  KGSimulator.h  MWSimLinkDef.h  TraceSimulator.SAVE  TraceSimulator.cc  TraceSimulator.cc.SAVE  TraceSimulator.cc~  TraceSimulator.h
Simulation/xml/: ElectronicsSimulator.xml  GHShowerGenerator.xml  TraceSimulator.xml
Utilities/: CMakeLists.txt  CTestTestfile.cmake  KascadeEnergyTable.txt  Makefile  cmake_install.cmake  libUtil.dylib
Utilities/src/: AugerUnits.h  BitTools.h  Configuration.cc  Configuration.h  KascadeEnergyConverter.cc  KascadeEnergyConverter.h  LinearInterpolator.h  MathConstants.h  MathFunctions.cc  MathFunctions.cc~  MathFunctions.h  PhysicalConstants.h  PhysicsFunctions.cc  PhysicsFunctions.cc~  PhysicsFunctions.h  RandomGenerator.cc  RandomGenerator.h  Singleton.h  TimeStamp.cc  TimeStamp.h  TimedClass.cc  TimedClass.h
Utilities/tests/: MathFunctionsTest.cc
