include_directories(
    ${MicroWave_SOURCE_DIR}/Event/src
    ${MicroWave_SOURCE_DIR}/Utilities/src
    ${MicroWave_SOURCE_DIR}/Detector/src
    ${MicroWave_SOURCE_DIR}/Simulation/src
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${FFTW3_INCLUDE_DIR}
    ${Spectrum_INCLUDE_DIR})
      
set(EXAMPLES_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX}/bin)

add_executable(testEventFile testEventFile.cc)
add_executable(convertRawData convertRawData.cc)
add_executable(selectKGCandidates selectKGCandidates.cc)
add_executable(testFFTW3 testFFTW3.cc)
add_executable(mwSimulation_1 mwSimulation_1.cc)
add_executable(testAtmosphere testAtmosphere.cc)
add_executable(analyzeSim_1 analyzeSim_1.cc)
add_executable(stackEvents stackEvents.cc)
add_executable(simulateEvent simulateEvent.cc)
add_executable(searchEvents searchEvents.cc)
add_executable(checkTiming checkTiming.cc)
add_executable(addCorrectedTriggerTime addCorrectedTriggerTime.cc)
add_executable(simulateEvents simulateEvents.cc)
add_executable(testTsky testTsky.cc)
add_executable(RunSensitivity RunSensitivity.cc)
add_executable(Data_FFT Data_FFT.cc)
add_executable(MakeRandomTraces MakeRandomTraces.cc)
add_executable(SimData SimData.cc)
add_executable(searchGigas searchGigas.cc)
add_executable(AddBackground AddBackground.cc)
add_executable(testwindows testwindows.cc)
add_executable(dumpsimfile dumpsimfile.cc)

target_link_libraries(testEventFile Event Detector Util tinyxml)
target_link_libraries(convertRawData Event Detector Util tinyxml)
target_link_libraries(selectKGCandidates Event Detector Util Sim tinyxml)
target_link_libraries(testAtmosphere Detector ${ROOT_LIBRARIES} tinyxml Util)
target_link_libraries(analyzeSim_1 Event Detector Util Sim tinyxml ${ROOT_LIBRARIES})
target_link_libraries(dumpsimfile Event Detector Util Sim tinyxml ${ROOT_LIBRARIES})
target_link_libraries(stackEvents Event Detector Util Sim tinyxml)
target_link_libraries(mwSimulation_1 Event Detector Util Sim tinyxml ${ROOT_LIBRARIES})
target_link_libraries(testFFTW3 ${FFTW3_LIBRARIES} ${ROOT_LIBRARIES})
target_link_libraries(simulateEvent Event Detector Util Sim tinyxml)
target_link_libraries(searchEvents Event Detector Util Sim tinyxml)
target_link_libraries(checkTiming Event Detector Util Sim ${ROOT_LIBRARIES} tinyxml)
target_link_libraries(addCorrectedTriggerTime Event Detector Util Sim ${ROOT_LIBRARIES} tinyxml)
target_link_libraries(simulateEvents Event Detector Util Sim tinyxml)
target_link_libraries(testTsky Event Detector Util Sim ${ROOT_LIBRARIES} tinyxml)
target_link_libraries(RunSensitivity Event Detector Util Sim ${ROOT_LIBRARIES} tinyxml)
target_link_libraries(Data_FFT Event Detector Util Sim ${ROOT_LIBRARIES} tinyxml)
target_link_libraries(MakeRandomTraces Event Detector Util Sim ${ROOT_LIBRARIES} tinyxml)
target_link_libraries(SimData Event Detector Util Sim ${ROOT_LIBRARIES} tinyxml)
target_link_libraries(searchGigas Event Detector Util Sim ${ROOT_LIBRARIES} tinyxml)
target_link_libraries(AddBackground Event Detector Util Sim ${ROOT_LIBRARIES} tinyxml)
target_link_libraries(testwindows Event Detector Util Sim ${ROOT_LIBRARIES} tinyxml)
install(TARGETS testEventFile DESTINATION ${EXAMPLES_INSTALL_PREFIX})
install(TARGETS convertRawData DESTINATION ${EXAMPLES_INSTALL_PREFIX})
install(TARGETS selectKGCandidates DESTINATION ${EXAMPLES_INSTALL_PREFIX})
install(TARGETS testAtmosphere DESTINATION ${EXAMPLES_INSTALL_PREFIX})
install(TARGETS analyzeSim_1 DESTINATION ${EXAMPLES_INSTALL_PREFIX})
install(TARGETS dumpsimfile DESTINATION ${EXAMPLES_INSTALL_PREFIX})
install(TARGETS mwSimulation_1 DESTINATION ${EXAMPLES_INSTALL_PREFIX})
install(TARGETS testFFTW3 DESTINATION ${EXAMPLES_INSTALL_PREFIX})
install(TARGETS stackEvents DESTINATION ${EXAMPLES_INSTALL_PREFIX})
install(TARGETS simulateEvent DESTINATION ${EXAMPLES_INSTALL_PREFIX})
install(TARGETS searchEvents DESTINATION ${EXAMPLES_INSTALL_PREFIX})
install(TARGETS checkTiming DESTINATION ${EXAMPLES_INSTALL_PREFIX})
install(TARGETS addCorrectedTriggerTime DESTINATION ${EXAMPLES_INSTALL_PREFIX})
install(TARGETS simulateEvents DESTINATION ${EXAMPLES_INSTALL_PREFIX})
install(TARGETS testTsky DESTINATION ${EXAMPLES_INSTALL_PREFIX})
install(TARGETS RunSensitivity DESTINATION ${EXAMPLES_INSTALL_PREFIX})
install(TARGETS Data_FFT DESTINATION ${EXAMPLES_INSTALL_PREFIX})
install(TARGETS MakeRandomTraces DESTINATION ${EXAMPLES_INSTALL_PREFIX})
install(TARGETS SimData DESTINATION ${EXAMPLES_INSTALL_PREFIX})
install(TARGETS searchGigas DESTINATION ${EXAMPLES_INSTALL_PREFIX})
install(TARGETS AddBackground DESTINATION ${EXAMPLES_INSTALL_PREFIX})
install(TARGETS testwindows DESTINATION ${EXAMPLES_INSTALL_PREFIX})
#install(PROGRAMS createREASAntennaList.py DESTINATION ${EXAMPLES_INSTALL_PREFIX})
#install(PROGRAMS createREASInput.py DESTINATION ${EXAMPLES_INSTALL_PREFIX})
#install(PROGRAMS plotSimulatedTrace.py DESTINATION ${EXAMPLES_INSTALL_PREFIX})
